# meta_nestris

./: Cargo.toml  LICENSE.txt  README.md  rust-toolchain.toml
src/: game_mode.rs  game_mode_state.rs  game_type.rs  gameplay_state.rs  input.rs  lib.rs  menu_mode.rs  menu_state.rs  meta_state.rs  modifier.rs  movie.rs  piece.rs  play_state.rs  random.rs  state.rs
tests/: menu_playback.rs  meta_state_equivalent.rs  movie_playback.rs  run_playback.rs
tests/movies/: metadata.json  metadata.yaml
tests/movies/a_type_999999_score/: tasvideos_1596m.fm2  tasvideos_239m.fm2  tasvideos_386m.fm2  tasvideos_399m.fm2  tasvideos_4853m.fm2  tasvideos_924m.fm2
tests/movies/a_type_max_score/: tasvideos_1596m.fm2  tasvideos_239m.fm2  tasvideos_386m.fm2  tasvideos_399m.fm2  tasvideos_7625s.fm2  tasvideos_924m.fm2
tests/movies/b_type_clear/: tasvideos_4210m.fm2  tasvideos_4210m_converted.fm2  tasvideos_920m.fm2  tasvideos_925m.fm2
tests/movies/death/: no_i_pieces.fm2  no_input.fm2  normal_play.fm2  random_input_0.fm2  random_input_1.fm2  random_input_2.fm2  random_input_3.fm2  random_input_4.fm2  random_input_5.fm2  random_input_6.fm2
tests/movies/menuing/: game_type_next_early.fm2  game_type_previous_early.fm2  gameplay_with_backtrack.fm2  gameplay_with_timeout.fm2  level_select_next_early.fm2  level_select_random_input.fm2  title_backtrack.fm2  title_next_early.fm2  title_next_early_after_timeout.fm2
tests/movies/menus/copyright/: copyright_next_early.fm2
tests/movies/menus/game_type/: game_type_random_input.fm2
tests/movies/menus/gameplay/: gameplay.fm2
(+2 files in other folders)
