[package]
name = "meta_nestris"
version = "0.1.0"
edition = "2021"

[dependencies]
bitmask-enum = "2"
bitvec = "1.0.1"
enum-primitive-derive = "0.2.2"
lazy_static = "1.4"
num-traits = "0.1"
once_cell = "1.13.0"
regex = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.10"
